decreases space between table cells, vertically aligns build data

--- a/jenkinjobs.css
+++ b/jenkinjobs.css
@@ -1,8 +1,49 @@
 /* CSS declarations go here */
-.line {
-    fill: none;
-    stroke: url(#line-gradient);
-    stroke-width: 10px;
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strong, sub, sup, var,
+b, u, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+  border-spacing:0;
+  border-collapse: collapse;
+}
+
+.build-series {
+  vertical-align: center;
 }
 
 .config-data {
@@ -12,7 +53,11 @@
 .status-circle:hover~.cell-info {
   z-index: 999;
   display: block;
+}
 
+.row-header {
+  float: right;
+  text-align: right;
 }
 
 .cell-info {
