--- a/jenkinjobs.css
+++ b/jenkinjobs.css
@@ -15,6 +15,7 @@ time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
+    font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
